--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./public/web-development-svgrepo-com (1).svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Devpolio</title>
+    <title>DevFolio</title>
   </head>
   <body>
     <div id="root"></div>
