--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
       type="image/svg+xml"
       href="./public/web-development-svgrepo-com (1).svg"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Ysabeau+Infant:ital,wght@0,1..1000;1,1..1000&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevFolio</title>
   </head>
