--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="./public/web-development-svgrepo-com (1).svg"
+      href="/web-development-svgrepo-com (1).svg"
     />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
